# text-to-sql-bi-chatbot

./: README.md  app.py  pyproject.toml
config/: .gitignore
notebooks/: 0-EDA.ipynb  1-Txt2SQL.ipynb  2-FixSQL.ipynb  3-Data2Python.ipynb  4-LangGraph.ipynb  5-Deploy-App.ipynb
utilities/: bedrock_utils.py  database_utils.py  langgraph_utils.py  prompt_utils.py  utils.py
